Wed Jun  9 16:48:13 1993  david d `zoo' zuhn  (zoo at cirdan.cygnus.com)

	* Makefile.in (install, headers): don't put comments after a tab
	in the actions section of a rule

Wed Jun  9 15:00:01 1993  Ian Lance Taylor  (ian@cygnus.com)

	* coff-mips.c (ecoff_mkobject_hook): Mark ZMAGIC files as D_PAGED.
	(ecoff_write_object_contents): If not D_PAGED, don't add the
	section headers to text_size.  If not D_PAGED, set the magic
	number to OMAGIC rather than ZMAGIC.  If creating a D_PAGED
	executable, the executable must fully occupy an even number of
	pages.
	(ecoff_set_symbol_info, make_bfd_asection, ecoff_little_vec,
	ecoff_big_vec): Consistently set section alignment power to 4,
	since ECOFF sections should be multiples of 16 bytes.
	(ecoff_little_vec, ecoff_big_vec): Added D_PAGED to object_flags.
	Made ar_pad_char and ar_max_namelen agree for both.

Tue Jun  8 20:28:02 1993  Mark Eichin  (eichin at tweedledumber)

	* elfcode.h (elf_slurp_symbol_table): subtract section vma from
	symbol value, since bfd symbols are section relative, but ELF
	symbols aren't. 

Tue Jun  8 12:08:27 1993  Steve Chamberlain  (sac@phydeaux.cygnus.com)

	* cpu-i960.c, cpu-h8300.c (compatible): Make static.

Tue Jun  8 14:27:56 1993  Jim Kingdon  (kingdon@rtl.cygnus.com)

	* hosts/news.h, config/news.mh: New files.

Tue Jun  8 12:08:27 1993  Steve Chamberlain  (sac@phydeaux.cygnus.com)

	* bfd-in2.h, archures.c (bfd_mach_h8300[h]): new defines.
	* coff-h8300.c: More addressing modes.
	* coffcode.h (coff_set_arch_mach_hook): Cope with H8300 magic
	number.
	* cpu-h8300.c: Removed disassemble stuff. (h8300_scan): Recognise
	H8/300H name. (compatible): New function. 
	* reloc16.c (bfd_coff_reloc16_get_relocated_sec): Cope with more
	addressing modes.	

Tue Jun  8 10:30:13 1993  Ian Lance Taylor  (ian@cygnus.com)

	* coff-mips.c (ecoff_compute_section_file_positions,
	ecoff_write_object_contents): Only round to page boundaries if
	D_PAGED flag is set for the output BFD.
