@@ -1,3 +1,10 @@
+Thu Jun 10 11:48:28 1993  Ian Lance Taylor  (ian@cygnus.com)
+
+	* coff-mips.c (ecoff_sec_to_styp_flags): Use STYP_MIPS_INIT for
+	section named _INIT.  Don't set STYP_TEXT unless SEC_CODE is set.
+	(ecoff_styp_to_sec_flags): Treat a STYP_MIPS_INIT section like
+	a STYP_TEXT section.
+
 Wed Jun  9 16:48:13 1993  david d `zoo' zuhn  (zoo at cirdan.cygnus.com)
 
 	* Makefile.in (install, headers): don't put comments after a tab
